--- a/code/tsconfig.json
+++ b/code/tsconfig.json
@@ -14,7 +14,8 @@
     "baseUrl": ".",
     "types": ["webpack-env"],
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@md/*": ["md/*"]
     },
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
