--- a/code/package.json
+++ b/code/package.json
@@ -35,11 +35,16 @@
         "@vue/eslint-config-typescript": "^7.0.0",
         "eslint": "^6.7.2",
         "eslint-plugin-vue": "^7.0.0",
+        "hot-hash-webpack-plugin": "^1.0.2",
         "less": "^3.0.4",
         "less-loader": "^5.0.0",
         "markdown-loader": "^8.0.0",
         "sass": "^1.44.0",
         "sass-loader": "^10.2.0",
-        "typescript": "~4.1.5"
+        "style-resources-loader": "^1.5.0",
+        "svg-sprite-loader": "^6.0.11",
+        "typescript": "~4.1.5",
+        "url-loader": "^4.1.1",
+        "webpackbar": "^5.0.2"
     }
 }
