--- a/code/package.json
+++ b/code/package.json
@@ -1,50 +1,52 @@
 {
-    "name": "vue3-md-blog",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service li=nt"
-    },
-    "dependencies": {
-        "@kangc/v-md-editor": "^2.3.13",
-        "axios": "^0.25.0",
-        "babel-plugin-prismjs": "^2.1.0",
-        "core-js": "^3.6.5",
-        "element-plus": "^1.2.0-beta.5",
-        "highlight.js": "^11.4.0",
-        "js-file-download": "^0.4.12",
-        "prismjs": "^1.26.0",
-        "store2": "^2.13.1",
-        "vue": "^3.2.31",
-        "vue-class-component": "^8.0.0-0",
-        "vue-router": "^4.0.0-0",
-        "vuex": "^4.0.0-0"
-    },
-    "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^4.18.0",
-        "@typescript-eslint/parser": "^4.18.0",
-        "@vue/cli-plugin-babel": "~4.5.0",
-        "@vue/cli-plugin-eslint": "~4.5.0",
-        "@vue/cli-plugin-router": "~4.5.0",
-        "@vue/cli-plugin-typescript": "~4.5.0",
-        "@vue/cli-plugin-vuex": "~4.5.0",
-        "@vue/cli-service": "~4.5.0",
-        "@vue/compiler-sfc": "^3.0.0",
-        "@vue/eslint-config-typescript": "^7.0.0",
-        "eslint": "^6.7.2",
-        "eslint-plugin-vue": "^7.0.0",
-        "hot-hash-webpack-plugin": "^1.0.2",
-        "less": "^3.0.4",
-        "less-loader": "^5.0.0",
-        "markdown-loader": "^8.0.0",
-        "sass": "^1.44.0",
-        "sass-loader": "^10.2.0",
-        "style-resources-loader": "^1.5.0",
-        "svg-sprite-loader": "^6.0.11",
-        "typescript": "~4.1.5",
-        "url-loader": "^4.1.1",
-        "webpackbar": "^5.0.2"
-    }
+  "name": "vue3-md-blog",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service li=nt"
+  },
+  "dependencies": {
+    "@kangc/v-md-editor": "^2.3.13",
+    "axios": "^0.25.0",
+    "babel-plugin-prismjs": "^2.1.0",
+    "core-js": "^3.6.5",
+    "element-plus": "^1.2.0-beta.5",
+    "highlight.js": "^11.4.0",
+    "js-file-download": "^0.4.12",
+    "prismjs": "^1.26.0",
+    "store2": "^2.13.1",
+    "vue": "^3.2.31",
+    "vue-class-component": "^8.0.0-0",
+    "vue-loader": "^17.0.0",
+    "vue-markdown-loader": "^2.5.0",
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.0-0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^7.0.0",
+    "hot-hash-webpack-plugin": "^1.0.2",
+    "less": "^3.0.4",
+    "less-loader": "^5.0.0",
+    "markdown-loader": "^8.0.0",
+    "sass": "^1.44.0",
+    "sass-loader": "^10.2.0",
+    "style-resources-loader": "^1.5.0",
+    "svg-sprite-loader": "^6.0.11",
+    "typescript": "~4.1.5",
+    "url-loader": "^4.1.1",
+    "webpackbar": "^5.0.2"
+  }
 }
