--- a/code/package.json
+++ b/code/package.json
@@ -15,16 +15,17 @@
     "element-plus": "^1.2.0-beta.5",
     "highlight.js": "^11.4.0",
     "js-file-download": "^0.4.12",
+    "nprogress": "^0.2.0",
     "prismjs": "^1.26.0",
     "store2": "^2.13.1",
     "vue": "^3.2.31",
     "vue-class-component": "^8.0.0-0",
     "vue-loader": "^17.0.0",
-    "vue-markdown-loader": "^2.5.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -35,12 +36,12 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
+    "ejs": "^3.1.6",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "hot-hash-webpack-plugin": "^1.0.2",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
-    "markdown-loader": "^8.0.0",
     "sass": "^1.44.0",
     "sass-loader": "^10.2.0",
     "style-resources-loader": "^1.5.0",
