--- a/code/package.json
+++ b/code/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build && node pack.js",
+    "build:gitee": "vue-cli-service build && node pack.js --gitee",
     "lint": "vue-cli-service li=nt"
   },
   "dependencies": {
@@ -39,6 +40,7 @@
     "ejs": "^3.1.6",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "fs-extra": "^10.0.1",
     "hot-hash-webpack-plugin": "^1.0.2",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
